--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.7"
 services:
   postgres:
     image: postgres:latest
@@ -6,9 +6,10 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=mydb
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - noticias_pg_data:/bitnami/postgresql
     ports:
       - "5200:5432"
 volumes:
-  postgres:
+  noticias_pg_data:
