--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
+  "engines": {
     "node": "18"
   },
   "scripts": {
     "dev": "tsx watch src/http/server.ts",
-    "build":"tsup src",
+    "build": "tsup src",
     "start": "node dist/server.js"
   },
   "keywords": [],
@@ -22,8 +22,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.9.1",
+    "@types/uuid": "^9.0.8",
+    "cors": "^2.8.5",
     "fastify": "^4.26.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
 }
